<resources>
    <string name="app_name">BasicLab</string>
    <string name="action1">Fragment1</string>
    <string name="action2">Fragment2</string>
    <string name="action3">Fragment3</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment !</string>
    <string name="hello_second_fragment">Hello second fragment!</string>

  <string name="helloThirdfragment">Hello third Fragment !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>