<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.basiclab.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_thirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_self"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.basiclab.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_thirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_firstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>



    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.basiclab.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_Third_fragment_to_First_fragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_Third_fragment_to_second_fragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_FirstFragment"
        app:destination="@id/FirstFragment" />
    <action
        android:id="@+id/action_global_SecondFragment"
        app:destination="@id/SecondFragment" />
    <action
        android:id="@+id/action_global_ThirdFragment"
        app:destination="@id/ThirdFragment" />
</navigation>